Details
-
Bug
-
Resolution: Fixed
-
Blocker
-
VirtualBox 5.2.26.
-
0.4.13-dev-547-g99fa38809fd8ed38d4d59fa1fcf3babb3216b895
Description
For reproducing this, simply download AC97 VirtualBox driver from Rapps, extract it in C:\ReactOS and try to install it via Device Manager by selecting "Multimedia audio device".
Up to 0.4.13-dev-546-gf565083d589c93792ded2a7b28a40d99020efad2 it installs without any problems. Since 0.4.13-dev-547-g99fa38809fd8ed38d4d59fa1fcf3babb3216b895 once the installation starts, the system immediately crashes to BSOD 0x1e.
In debug mode, first appears an exception, and only after bt and cont, appears Fatal System Error 0x1e:
[7h
|
Entered debugger on last-chance exception (Exception Code: 0xc0000005) (Page Fault) |
Memory at 0x00000048 could not be written: Page not present. |
kdb:> bt
|
Eip:
|
<ntoskrnl.exe:15fd66 (sdk/lib/rtl/unicode.c:644 (RtlInitUnicodeString))> |
Frames:
|
<portcls.sys:1433 (drivers/wdm/audio/backpln/portcls/adapter.cpp:275 (PcRegisterSubdevice))> |
<ALCXWDM.SYS:14973> |
<ALCXWDM.SYS:14b1c>
|
<portcls.sys:5a4e (drivers/wdm/audio/backpln/portcls/irp.cpp:98 (PortClsPnp))> |
<portcls.sys:5c90 (drivers/wdm/audio/backpln/portcls/irp.cpp:450 (PcDispatchIrp))> |
<ntoskrnl.exe:72580 (ntoskrnl/io/iomgr/irp.c:1286 (IofCallDriver))> |
Couldn't access memory at 0xF6C7FA50! |
kdb:> cont
|
|
|
*** Fatal System Error: 0x0000001e |
(0xC0000005,0x8095FD66,0xF6C7F880,0x00000000) |
|
|
Entered debugger on embedded INT3 at 0x0008:0x809554c4. |
kdb:>
|
There are many lines associated with portcls driver. After replacing portcls.sys on version from Win2k3, the installation completes succesfully even in 0.4.13-dev-547-g99fa388, without any failures. So problem is indeed only in our portcls driver.
P.S.: I could to install AC97 driver successfully only once in 0.4.13-dev-547-g99fa388 with our portcls only once, but after twice reboot appeared the same problem and the system couldn't boot into desktop.
Attachments
Issue Links
- is duplicated by
-
CORE-16155 Regression, BSOD 0x1E during 2nd stage setup when ALCXWDM.SYS is integrated into bootcd
-
- Resolved
-
-
CORE-16153 BSOD when installing Intel AC97 Audio driver in VirtualBox
-
- Resolved
-